--- a/Publications.htm
+++ b/Publications.htm
@@ -44,10 +44,12 @@ Curative Drug
 Expenses: The Case of Hepatitis C in France</a>" with Thierry Magnac</span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">,&nbsp;<a
+ style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://www.sciencedirect.com/science/article/pii/S0167629624000067"
  target="_blank"><span style="font-style: italic; font-weight: bold;">Journal
 of
-Health</span></a></span><a style="text-decoration: none;"
+Health</span></a></span><a
+ style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://www.sciencedirect.com/science/article/pii/S0167629624000067"
  target="_blank"><span
  style="font-style: italic; font-family: Calibri; font-weight: bold;">
