--- a/other.htm
+++ b/other.htm
@@ -252,12 +252,8 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;- 8th AMR Conference, Basel, March 6, 2024<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;- 8th AMR Conference, Basel, March 7, 2024<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
 &nbsp; - CREST Paris, IO seminar,
 March 27, 2024<br>
@@ -277,10 +273,16 @@ May 23 2024<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;
+- Keynote, XLIII Health Economics Conference (AES), Tenerife,
+June&nbsp;27, 2024<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;
 - Keynote,&nbsp;Journ&eacute;es Internationales du Risque, Niort,
 France,
-June 27-28, 2024<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- London Business
+June&nbsp;28, 2024<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- London Business
 School, seminar, September 11, 2024<br>
 </span><span style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">Past :</span><!--[endif]-->
@@ -290,9 +292,16 @@ School, seminar, September 11, 2024<br>
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;</span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;- 8th AMR Conference, Basel, March 6, 2024<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - 8th AMR
+Conference, Basel, March 7, 2024<br>
+</span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-- University of
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- University of
 Maryland, IO seminar, November 28, 2023<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
