--- a/contact.htm
+++ b/contact.htm
@@ -48,6 +48,9 @@ Universitaire de France</a>
  target="_blank">CEPR</a>
 Industrial Organization Program Director
 (2022-)<br>
+&nbsp;<a href="https://13xy.mj.am/nl3/urBzcvBdx8c8U-tZ4y3Qaw?hl=en"
+ target="_blank">European Research Council</a> Advanced Grant
+(2024-2029)<br>
 <br>
 &nbsp;<a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
