--- a/other.htm
+++ b/other.htm
@@ -254,37 +254,41 @@ Conferences</a></h3>
 :</p>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;
-&nbsp; - CREST Paris, IO seminar,
-March 27, 2024<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - University of Bristol, April 8, 2024</span><br>
-<span style="font-family: Calibri;">
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Journ&eacute;es
-AntibioDEAL, Paris, April 9, 2024<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - LUISS Roma, Department
-seminar, April 10, 2024<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - University of Verona,
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - University of Verona,
 May 23 2024<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Bank of Spain, June 5,
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; - Workshop on
+Econometrics and Models of Strategic Interactions, Napoli, May 24, 2024<br>
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Bank of Spain,
+June 5,
 2024<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- </span><span
+ style="font-family: Calibri;">Roundtable on "Sant&eacute; et IO:
+m&eacute;decine pr&eacute;dictive ou pr&eacute;ventive?", Common Good
+Summit, Paris, </span><span style="font-family: Calibri;">June 14, 2024<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;
-- Keynote, XLIII Health Economics Conference (AES), Tenerife,
-June&nbsp;27, 2024<br>
+- <a style="text-decoration: none; color: rgb(0, 0, 0);"
+ href="https://www.aes.es/jornadas/es/#ponentes" target="_blank">Keynote,
+XLIII Health Economics Conference (AES), Tenerife,
+June&nbsp;27, 2024</a><br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;
-- Keynote,&nbsp;Journ&eacute;es Internationales du Risque, Niort,
+- <a style="text-decoration: none;" color="rgb(0, 0, 0)"
+ href="https://iriaf.univ-poitiers.fr/journees-internationales-du-risque-2024/"
+ target="_blank">Keynote,&nbsp;Journ&eacute;es Internationales du
+Risque, Niort,
 France,
-June&nbsp;28, 2024<br>
+June&nbsp;28, 2024</a><br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- London Business
 School, seminar, September 11, 2024<br>
-</span><span style="font-family: Calibri;">&nbsp;</span><span
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- Medical School of Toulouse, seminar,
+September 16, 2024<br>
+</span><br>
+<span style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">Past :</span><!--[endif]-->
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
@@ -292,8 +296,28 @@ School, seminar, September 11, 2024<br>
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;</span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- LUISS Roma, Department
+seminar, April 10, 2024<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Journ&eacute;es
+AntibioDEAL, Paris, April 9, 2024<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;
+&nbsp; </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp; - University of Bristol, April 8, 2024</span><br>
+<span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp; &nbsp;- 8th AMR Conference, Basel, March 6, 2024<br>
+&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; </span><span
+ style="font-family: Calibri;">- CREST Paris, IO seminar,
+March 27, 2024<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;</span><span
+ style="font-family: Calibri;"> - 8th AMR Conference, Basel, March 6,
+2024<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - 8th AMR
@@ -1716,7 +1740,7 @@ placement:
 Assistant
 Professor, ESSEC Business School Paris</li>
   <li><a href="https://www.gokcegokkoca.com/">Gokce Gokkoca</a>, IO and
-Health</li>
+Health, defenseon June 3, 2024</li>
   <li><a href="https://www.tse-fr.eu/fr/people/lea-bignon"
  target="_blank">L&eacute;a Bignon</a>, IO and Health</li>
   <li><a href="https://www.tse-fr.eu/people/xin-zhang" target="_blank">Xin
