--- a/contact.htm
+++ b/contact.htm
@@ -48,7 +48,7 @@ Universitaire de France</a>
  target="_blank">CEPR</a>
 Industrial Organization Program Director
 (2022-)<br>
-&nbsp;<a href="https://13xy.mj.am/nl3/urBzcvBdx8c8U-tZ4y3Qaw?hl=en"
+&nbsp;<a href="https://www.tse-fr.eu/erc-advanced-grant-pierre-dubois"
  target="_blank">European Research Council</a> Advanced Grant
 (2024-2029)<br>
 <br>
