--- a/other.htm
+++ b/other.htm
@@ -73,6 +73,14 @@ Conferences</a></h3>
 <ul style="font-family: Calibri;">
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
+with Jean Tirole of the 3rd&nbsp;<a
+ href="https://www.tse-fr.eu/conferences/2024-2nd-health-economics-conference?lang=en"
+ target="_blank">Health Economics Conference</a>, Toulouse
+School
+of Economics, June 18-19, 2025</p>
+  </li>
+  <li>
+    <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
 with Jean Tirole of the 2nd&nbsp;<a
  href="https://www.tse-fr.eu/conferences/2024-2nd-health-economics-conference?lang=en"
  target="_blank">Health Economics Conference</a>, Toulouse
@@ -254,51 +262,95 @@ Conferences</a></h3>
 :</p>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - University of Verona,
-May 23 2024<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; - Workshop on
-Econometrics and Models of Strategic Interactions, Napoli, May 24, 2024<br>
-&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Bank of Spain,
-June 5,
-2024<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- </span><span
- style="font-family: Calibri;">Roundtable on "Sant&eacute; et IO:
-m&eacute;decine pr&eacute;dictive ou pr&eacute;ventive?", Common Good
-Summit, Paris, </span><span style="font-family: Calibri;">June 14, 2024<br>
-</span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;
-- <a style="text-decoration: none; color: rgb(0, 0, 0);"
- href="https://www.aes.es/jornadas/es/#ponentes" target="_blank">Keynote,
-XLIII Health Economics Conference (AES), Tenerife,
-June&nbsp;27, 2024</a><br>
-</span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;
-- <a style="text-decoration: none;" color="rgb(0, 0, 0)"
- href="https://iriaf.univ-poitiers.fr/journees-internationales-du-risque-2024/"
- target="_blank">Keynote,&nbsp;Journ&eacute;es Internationales du
-Risque, Niort,
-France,
-June&nbsp;28, 2024</a><br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- London Business
 School, seminar, September 11, 2024<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- Medical School of Toulouse, seminar,
 September 16, 2024<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;- VIII Congreso
+de Economia Colombiana, University de los Andes, Bogota, </span><span
+ style="font-family: Calibri;">October 3-4, 2024</span><br>
+<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- Colegio Carlo
+Alberto, Torino, November 13, 2024<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Boston Fed,
+November
+22, 2024<br>
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Duke University,
+IO seminar, March 18, 2025<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Rice conference,
+Paris, May 23-24, 2025<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- Market and Waves
+Conference, Lisbon, June 7, 2025</span><span
+ style="font-family: Calibri;"><br>
 </span><br>
 <span style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">Past :</span><!--[endif]-->
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
  style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;</span><span
+ style="font-family: Calibri;">&nbsp; </span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; </span><span style="font-family: Calibri;">&nbsp;</span><span
+ style="font-family: Calibri;">- <a
+ style="text-decoration: none; color: rgb(0, 0, 0);"
+ color="rgb(0, 0, 0)"
+ href="https://iriaf.univ-poitiers.fr/journees-internationales-du-risque-2024/"
+ target="_blank">Keynote,&nbsp;Journ&eacute;es Internationales du
+Risque, Niort,
+France,
+June&nbsp;28, 2024</a></span></p>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;</span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">- <a
+ style="text-decoration: none; color: rgb(0, 0, 0);"
+ href="https://www.aes.es/jornadas/es/#ponentes" target="_blank">Keynote,
+XLIII Health Economics Conference (AES), Tenerife,
+June&nbsp;27, 2024</a><br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;</span><span
+ style="font-family: Calibri;">- </span><span
+ style="font-family: Calibri;">Roundtable on "Antibioth&eacute;rapie",
+Maison de l'Am&eacute;rique Latine, Paris, </span><span
+ style="font-family: Calibri;">June 18, 2024<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; </span><span
+ style="font-family: Calibri;">- </span><span
+ style="font-family: Calibri;">Roundtable on "Sant&eacute; et IO:
+m&eacute;decine pr&eacute;dictive ou pr&eacute;ventive?", Common Good
+Summit, Paris, </span><span style="font-family: Calibri;">June 14, 2024<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp; </span><span style="font-family: Calibri;">- Bank of Spain,
+June 5,
+2024<br>
+</span><span style="font-family: Calibri;">&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; -
+Workshop on
+Econometrics and Models of Strategic Interactions, Napoli, May 24, 2024<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;</span><span
+ style="font-family: Calibri;">
 &nbsp;</span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- LUISS Roma, Department
+&nbsp;&nbsp;&nbsp;- University of Verona,
+May 23, 2024<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; </span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;- LUISS Roma, Department
 seminar, April 10, 2024<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
@@ -1665,7 +1717,7 @@ placement: post
 doc Leverhulme
 Trust at
 University College
-London, IFS Senior Researcher<o:p></o:p></li>
+London, IFS Senior Researcher, now at International Development Bank<o:p></o:p></li>
   <li><a target="_blank"
  href="https://www.caixabankresearch.com/en/author/sandra-jodar-rosell">Sandra
 Jodar</a>: <i style="">Econometrics
@@ -1739,14 +1791,18 @@ Pharmaceutical Markets</span>, defended on June 23, 2023&nbsp;first
 placement:
 Assistant
 Professor, ESSEC Business School Paris</li>
-  <li><a href="https://www.gokcegokkoca.com/">Gokce Gokkoca</a>, IO and
-Health, defenseon June 3, 2024</li>
+  <li><a href="https://www.gokcegokkoca.com/">Gokce Gokkoca</a>, <span
+ style="font-style: italic;">Essays on Industrial Organization and
+Health</span>, defended on June 3, 2024, first placement: Analysis
+Group, Paris</li>
   <li><a href="https://www.tse-fr.eu/fr/people/lea-bignon"
  target="_blank">L&eacute;a Bignon</a>, IO and Health</li>
   <li><a href="https://www.tse-fr.eu/people/xin-zhang" target="_blank">Xin
 Zhang</a>, IO</li>
   <li><a href="https://www.tse-fr.eu/fr/people/valentina-reig"
  target="_blank">Valentina Reig</a>, IO and Health</li>
+  <li>Giulia Tani</li>
+  <li>Santiago Ortiz</li>
 </ul>
 <hr style="font-family: Calibri;">
 <p
