--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html lang="en">
 <head>
-<!-- saved from url=(0061)http://www.toulouse.inra.fr/centre/esr/CV/dubois/duboisen.htm -->
   <meta http-equiv="Content-Type"
  content="text/html; charset=windows-1252">
   <meta http-equiv="Content-Language" content="en-us">
@@ -26,28 +25,34 @@
 &nbsp;Professor
 of Economics,&nbsp;<a style="color: rgb(44, 19, 209);" target="_blank"
  href="http://tse-fr.eu/">Toulouse
-School of Economics</a><span style="color: rgb(0, 0, 0);">,&nbsp;</span><a
- style="text-decoration: none; color: rgb(0, 0, 0);" target="_blank"
- href="http://www.ut-capitole.fr/">University
-of Toulouse
-1 Capitole</a>
+School of Economics</a><span style="color: rgb(0, 0, 0);"></span>
 <div><br>
-<span style="font-family: Calibri;">&nbsp;Co-Editor, <a
- style="color: rgb(0, 0, 0); text-decoration: none;"
- href="https://academic.oup.com/jeea" target="_blank">Journal
+<span style="font-family: Calibri;">&nbsp;Co-Editor,
+<a style="color: rgb(44, 19, 209);" href="https://academic.oup.com/jeea"
+ target="_blank">Journal
 of the
 European Economic Association</a></span>
 (2021-)</div>
 <div>
-&nbsp;Director <a style="color: rgb(0, 0, 0); text-decoration: none;"
+&nbsp;Director <a style="color: rgb(44, 19, 209);"
  href="https://www.tse-fr.eu/health" target="_blank">TSE
-Health Center</a> (2021-)
+Health Center</a>
+(2021-)
 <font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;<br>
-&nbsp;Senior Member of <a
- style="text-decoration: none; color: rgb(0, 0, 0);" color="rgb(0,0,0)"
+&nbsp;Senior Member of <a style="color: rgb(44, 19, 209);"
  href="https://www.iufrance.fr/" target="_blank">Institut
-Universitaire de France</a> (2022-2027)</font></div>
+Universitaire de France</a>
+(2022-2027)</font></div>
 <div>&nbsp;<a
+ href="https://cepr.org/research/programme-areas/industrial-organization"
+ target="_blank">CEPR</a>
+Industrial Organization Program Director
+(2022-)<br>
+&nbsp;<a href="https://www.tse-fr.eu/erc-advanced-grant-pierre-dubois"
+ target="_blank">European Research Council</a> Advanced Grant
+(2024-2029)<br>
+<br>
+&nbsp;<a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
  href="https://ifs.org.uk/people/pierre-dubois" target="_blank">IFS
 Research Fellow</a>
@@ -97,17 +102,17 @@ of Economics, Northwestern University (2010-2011)
  style="font-family: Calibri;">&nbsp;Managing
 Editor of&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
- href="http://www.journals.elsevier.com/international-journal-of-industrial-organization/"
+ href="https://www.sciencedirect.com/journal/international-journal-of-industrial-organization"
  target="_blank">International Journal of Industrial
 Organization</a><span style="font-family: Calibri;">
 (2013-2018)</span></div>
-<div><span style="font-family: Calibri;">&nbsp;Associate Editor of <a
- style="text-decoration: none; color: rgb(0, 0, 0);"
+<div><span style="font-family: Calibri;">&nbsp;Associate
+Editor of <a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://www.journals.elsevier.com/european-economic-review"
  target="_blank">European Economic Review</a>
-(2012-)</span></div>
-<div><span style="font-family: Calibri;">&nbsp;Associate Editor of <a
- style="text-decoration: none; color: rgb(0, 0, 0);"
+(2012-2023)</span></div>
+<div><span style="font-family: Calibri;">&nbsp;Associate
+Editor of <a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://annals.ensae.fr/" target="_blank">Annals
 of Economics
 and Statistics</a> (2009-)</span></div>
@@ -136,9 +141,7 @@ CV</a></font></div>
  style="text-decoration: none;"
  href="http://www.tse-fr.eu/people/pierre-dubois" target="_blank"><span
  style="color: rgb(0, 0, 0);">TSE web page</span></a></font></div>
-<div><font style="color: rgb(0, 0, 0); font-family: Calibri;"><a
- style="text-decoration: none;"
- href="http://www.tse-fr.eu/people/pierre-dubois" target="_blank"></a>&nbsp;<a
+<div><font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;<a
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="http://scholar.google.fr/citations?user=6Eo7zF0AAAAJ&amp;hl=fr"
  target="_blank">Google Scholar Page</a></font></div>
@@ -158,8 +161,8 @@ Esplanade de l'Universit&eacute;
 Toulouse Cedex 06
 </div>
 <div>France</div>
-<font style="font-family: Calibri;"><a style="font-weight: bold;"
- href="https://gosia-majewska.github.io/" target="_blank"></a><br>
-<a href="https://voxeu.org/users/pierredubois0" target="_blank"></a></font>
+<font style="font-family: Calibri;"><span
+ style="text-decoration: underline;"><span style="font-weight: bold;"></span></span><br>
+</font>
 </body>
 </html>
