--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -29,7 +29,8 @@ papers:</i></p>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><!--[endif]--></p>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;&nbsp;
-"<a href="ADGO.pdf" target="_blank">The Effects of Sin Taxes and
+"<a href="ADGO2024withappendix.pdf" target="_blank">The Effects of Sin
+Taxes and
 Advertising Restrictions in a Dynamic Equilibrium</a>"&nbsp;with
 Rossi
 Abi-Rafeh, Rachel Griffith, Martin O'Connell<br>
