--- a/other.htm
+++ b/other.htm
@@ -270,10 +270,15 @@ September 16, 2024<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- Conf&eacute;rence
 d&eacute;fi et horizons soci&eacute;taux, Univeristy of Toulouse,
 September 26, 2024<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;- VIII Congreso
-de Economia Colombiana, University de los Andes, Bogota, </span><span
- style="font-family: Calibri;">October 3-4, 2024</span><br>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;- Keynote <a
+ color="rgb(0,0,0)"
+ href="https://evento.uniandes.edu.co/es/viii-congreso-economia-colombiana"
+ target="_blank">VIII Congreso
+de Economia Colombiana</a>, University de los Andes, Bogota, </span><span
+ style="font-family: Calibri;">October 3-4, 2024<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- Toulouse School of
+Economics, October 10, 2024<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- Colegio Carlo
 Alberto, Torino, November 13, 2024<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Boston Fed,
