--- a/other.htm
+++ b/other.htm
@@ -69,7 +69,7 @@ Conferences</a></h3>
     </tr>
   </tbody>
 </table>
-<br style="font-family: Calibri;">
+<span style="font-family: Calibri;">&nbsp;</span>
 <ul style="font-family: Calibri;">
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
@@ -78,6 +78,11 @@ with Jean Tirole of the 3rd&nbsp;<a
  target="_blank">Health Economics Conference</a>, Toulouse
 School
 of Economics, June 18-19, 2025</p>
+  </li>
+  <li>
+    <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
+of the Industrial Orgnization segment of the CEPR Symposium, Paris,
+December 18, 2024</p>
   </li>
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
@@ -263,13 +268,12 @@ Conferences</a></h3>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp; &nbsp;- Toulouse School of
-Economics, October 10, 2024<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- Colegio Carlo
 Alberto, Torino, November 13, 2024<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Boston Fed,
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Boston Fed, CBO
+conference,
 November
 22, 2024<br>
 &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Duke University,
@@ -286,8 +290,14 @@ Conference, Lisbon, June 7, 2025</span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;</span><span
+ style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp; &nbsp; - Keynote <a color="rgb(0,0,0)"
+&nbsp;&nbsp; &nbsp;- Toulouse School of
+Economics, Workshop in Honor of Michael Whinston, October 10, 2024<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; -
+Keynote <a color="rgb(0,0,0)"
  href="https://evento.uniandes.edu.co/es/viii-congreso-economia-colombiana"
  target="_blank">VIII Congreso
 de Economia Colombiana</a>, University de los Andes, Bogota, </span><span
