--- a/other.htm
+++ b/other.htm
@@ -265,16 +265,8 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp; - Boston Fed, CBO
-conference,
-November
-22, 2024<br>
-&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Duke University,
+<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - Duke University,
 IO seminar, March 18, 2025<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Rice conference,
 Paris, May 23-24, 2025<br>
@@ -298,8 +290,18 @@ School, Nice, September 2025<br>
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;</span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; - Colegio Carlo
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; - Boston Fed, CBO
+conference,
+November
+22, 2024<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; - Colegio Carlo
 Alberto, Torino, November 13, 2024<br>
 </span><span style="font-family: Calibri;"> </span><span
  style="font-family: Calibri;">&nbsp;
