--- a/other.htm
+++ b/other.htm
@@ -268,8 +268,17 @@ Conferences</a></h3>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - Duke University,
 IO seminar, March 18, 2025<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Rice conference,
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - North Carolina State University,&nbsp;March
+20, 2025<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; - Rice conference,
 Paris, May 23-24, 2025<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- <a
+ href="https://www.catianicodemo.com/files/AMERICAN-EUROPEAN-OXFORD.pdf"
+ target="_blank">Keynote,
+American-European Health Economics Study Group, Oxford, May 28, 2025</a>
+<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- Markets and Waves
 Conference, Lisbon, June 7, 2025<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;- CCP Annual
