--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -4,6 +4,8 @@
 
 
 
+
+  
   
   
   
@@ -11,6 +13,8 @@
 
 
 
+
+  
   
   
   
@@ -18,6 +22,8 @@
 
 
 
+
+  
   
   
   
@@ -25,6 +31,8 @@
 
 
 
+
+  
   
   
   
@@ -32,6 +40,8 @@
 
 
 
+
+  
   
   
   
@@ -39,6 +49,8 @@
 
 
 
+
+  
   
   
   
@@ -46,6 +58,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -61,11 +76,14 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><a name="Workingpapers"></a></i></p>
 
 
 
+
 <br>
+
 
 
 
@@ -74,7 +92,9 @@ papers:</i></p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><a name="IO"></a>&nbsp;</p>
+
 
 
 
@@ -82,17 +102,22 @@ papers:</i></p>
 
 
 
+
 <span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;&nbsp;
 "Pharmaceutical Advertising in Dynamic Equilibrium", with Ariel Pakes<br>
+
 
 
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp; <br>
 
 
+
 &nbsp;&nbsp;&nbsp; &nbsp;"Biologic Drugs and Learning by Doing" with L&eacute;a Bignon<br>
 
 
+
 <br>
+
 
 
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">
@@ -104,8 +129,10 @@ Abi-Rafeh, Rachel Griffith, Martin O'Connell<br>
 
 
 
+
 </span></span>
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -115,7 +142,9 @@ with Paul-Henri Moisson and Jean Tirole<br>
 
 
 
+
 <br>
+
 
 
 
@@ -126,11 +155,14 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 <p class="MsoNormal" style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span style="font-family: Calibri;"><span lang="EN-US"><br>
 
 
 
+
 </span></span></p>
+
 
 
 
@@ -143,19 +175,9 @@ Pharmaceutical Industry</a>", with Gosia Majewska<o:p></o:p></span></p>
 
 
 
-<span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"><br>
 
+<span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span style="font-style: italic;"></span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
 
-
-</span><span style="font-family: Calibri;">&nbsp;&nbsp; &nbsp; "<a href="Dubois_Gokkoca_AntibioticDemandinthePresenceofAntimicrobialResistance.pdf" target="_blank">Antibiotic Demand in the Presence of
-Antimicrobial
-Resistance</a>", with G&ouml;k&ccedil;e G&ouml;kkoca, revise and
-resubmit at the <span style="font-style: italic;">Review of Economics
-and Statistics</span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
-
-
-
-<br>
 
 
 
@@ -169,7 +191,9 @@ and Shoshana Vasserman <br>
 
 
 
+
 <br>
+
 
 
 
@@ -179,8 +203,10 @@ Valentina Reig<br>
 
 
 
+
 </span></span><span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
+
 
 
 
@@ -193,7 +219,9 @@ Drug Approvals</a>" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 
 
 
+
 <br>
+
 
 
 
@@ -208,7 +236,9 @@ Kyle <br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><br>
+
 
 
 
@@ -219,7 +249,9 @@ C&eacute;line Bonnet <br>
 
 
 
+
 <br>
+
 
 
 
@@ -230,8 +262,10 @@ Ligon, CEPR DP 7574<br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
+
 
 
 
@@ -241,11 +275,14 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span><span style="font-family: Calibri;"></span><br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -254,11 +291,14 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span></span><span style="font-family: Calibri;"></span><br>
 
 
 
+
 &nbsp;</p>
+
 
 
 
@@ -267,7 +307,9 @@ resubmitted):<br>
 
 
 
+
 </span></span></span><br style="font-family: Calibri;">
+
 
 
 
@@ -282,7 +324,9 @@ CEPR DP 7847<br>
 
 
 
+
 <br>
+
 
 
 
@@ -295,7 +339,9 @@ Statistics</i><br>
 
 
 
+
 <br>
+
 
 
 
@@ -308,7 +354,9 @@ Political Economy</i><span style="font-family: Calibri;"> </span><br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;"><br>
+
 
 
 
@@ -322,7 +370,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br>
+
 
 
 
@@ -330,11 +380,14 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;">Permanent Working Papers:<br>
 
 
 
+
 <br style="font-weight: bold;">
+
 
 
 
@@ -348,7 +401,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </span></span><br>
+
 
 
 
@@ -357,7 +412,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </ul>
+
 
 
 
@@ -366,7 +423,9 @@ Working Papers</span></span><span style="color: rgb(33, 33, 33); font-family: Bi
 
 
 
+
 <br>
+
 
 
 
@@ -377,7 +436,9 @@ Evidence from the Philippines", with Ethan Ligon <br>
 
 
 
+
 <br>
+
 
 
 
@@ -389,7 +450,9 @@ Val&eacute;rie Orozco <br>
 
 
 
+
 <br>
+
 
 
 
@@ -399,7 +462,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 &nbsp;<br>
+
 
 
 
@@ -408,7 +473,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 </ul>
+
 
 
 
