--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -8,6 +8,8 @@
 
 
 
+
+  
   
   
   
@@ -23,6 +25,8 @@
 
 
 
+
+  
   
   
   
@@ -38,6 +42,8 @@
 
 
 
+
+  
   
   
   
@@ -53,6 +59,8 @@
 
 
 
+
+  
   
   
   
@@ -68,6 +76,8 @@
 
 
 
+
+  
   
   
   
@@ -83,6 +93,8 @@
 
 
 
+
+  
   
   
   
@@ -98,6 +110,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -125,6 +140,7 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><a name="Workingpapers"></a></i></p>
 
 
@@ -133,7 +149,9 @@
 
 
 
+
 <br>
+
 
 
 
@@ -150,7 +168,9 @@ papers:</i></p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><a name="IO"></a>&nbsp;</p>
+
 
 
 
@@ -166,8 +186,10 @@ papers:</i></p>
 
 
 
+
 <span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;&nbsp;
 "Pharmaceutical Advertising in Dynamic Equilibrium", with Ariel Pakes<br>
+
 
 
 
@@ -181,7 +203,11 @@ papers:</i></p>
 
 
 
+
 &nbsp;&nbsp;&nbsp; &nbsp;"Biologic Drugs and Learning by Doing" with L&eacute;a Bignon<br>
+<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&ldquo;Regulating Trade Margins and Consumer Welfare: Evidence from Cardiac Products in India&rdquo; with Debi Prasad Mohapatra<br>
+
 
 
 
@@ -189,6 +215,7 @@ papers:</i></p>
 
 
 <br>
+
 
 
 
@@ -208,8 +235,10 @@ Abi-Rafeh, Rachel Griffith, Martin O'Connell<br>
 
 
 
+
 </span></span>
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -227,7 +256,9 @@ with Paul-Henri Moisson and Jean Tirole<br>
 
 
 
+
 <br>
+
 
 
 
@@ -246,6 +277,7 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 <p class="MsoNormal" style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span style="font-family: Calibri;"><span lang="EN-US"><br>
 
 
@@ -254,7 +286,9 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 
 
 
+
 </span></span></p>
+
 
 
 
@@ -275,7 +309,9 @@ Pharmaceutical Industry</a>", with Gosia Majewska<o:p></o:p></span></p>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"></span></span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><span style="font-style: italic;"></span></span><span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -297,7 +333,9 @@ and Shoshana Vasserman <br>
 
 
 
+
 <br>
+
 
 
 
@@ -315,8 +353,10 @@ Valentina Reig<br>
 
 
 
+
 </span></span><span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
+
 
 
 
@@ -337,7 +377,9 @@ Drug Approvals</a>" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 
 
 
+
 <br>
+
 
 
 
@@ -360,7 +402,9 @@ Kyle <br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;"><br>
+
 
 
 
@@ -379,7 +423,9 @@ C&eacute;line Bonnet <br>
 
 
 
+
 <br>
+
 
 
 
@@ -398,8 +444,10 @@ Ligon, CEPR DP 7574<br>
 
 
 
+
 </span><span style="font-family: Calibri;"></span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
+
 
 
 
@@ -417,6 +465,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span><span style="font-family: Calibri;"></span><br>
 
 
@@ -425,7 +474,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
+
 
 
 
@@ -442,6 +493,7 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 </span></span><span style="font-family: Calibri;"></span><br>
 
 
@@ -450,7 +502,9 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Cal
 
 
 
+
 &nbsp;</p>
+
 
 
 
@@ -467,7 +521,9 @@ resubmitted):<br>
 
 
 
+
 </span></span></span><br style="font-family: Calibri;">
+
 
 
 
@@ -490,7 +546,9 @@ CEPR DP 7847<br>
 
 
 
+
 <br>
+
 
 
 
@@ -511,7 +569,9 @@ Statistics</i><br>
 
 
 
+
 <br>
+
 
 
 
@@ -532,7 +592,9 @@ Political Economy</i><span style="font-family: Calibri;"> </span><br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;"><br>
+
 
 
 
@@ -554,7 +616,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br>
+
 
 
 
@@ -570,6 +634,7 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <span style="font-family: Calibri;"><span lang="EN-US"><span style="font-weight: bold;">Permanent Working Papers:<br>
 
 
@@ -578,7 +643,9 @@ Economic Journal, Microeconomics</span><span style="font-family: Calibri;"> <br>
 
 
 
+
 <br style="font-weight: bold;">
+
 
 
 
@@ -600,7 +667,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </span></span><br>
+
 
 
 
@@ -617,7 +686,9 @@ CEPR DP 5990<span lang="EN-US"><br>
 
 
 
+
 </ul>
+
 
 
 
@@ -634,7 +705,9 @@ Working Papers</span></span><span style="color: rgb(33, 33, 33); font-family: Bi
 
 
 
+
 <br>
+
 
 
 
@@ -653,7 +726,9 @@ Evidence from the Philippines", with Ethan Ligon <br>
 
 
 
+
 <br>
+
 
 
 
@@ -673,7 +748,9 @@ Val&eacute;rie Orozco <br>
 
 
 
+
 <br>
+
 
 
 
@@ -691,7 +768,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 &nbsp;<br>
+
 
 
 
@@ -708,7 +787,9 @@ Index in China", with Ju Qiu <br>
 
 
 
+
 </ul>
+
 
 
 
